test/fixtures/valid/test-basic.fez
<script>
  onInit() {
    this.state.count = 0
  }

  increment() {
    this.state.count++
  }
</script>

<style>
  :fez {
    padding: 10px;

    button {
      background: blue;
    }
  }
</style>

<button onclick="fez.increment()">Count: {{ state.count }}</button>
