test/fixtures/invalid/test-js-syntax.fez
<script>
  onInit() {
    this.state.count = 0
    let x =   // syntax error - incomplete assignment
  }
</script>

<div>{{ state.count }}</div>
